<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Contact</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="donuts_are_glazed_and_sprinkled_with_candy">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches_have_chocolate_wafers_and_vanilla_filling">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_is_premium_self_serve_frozen_yogurt">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="order">Order</string>
    <string name="nome">Nome</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="endere_o">Endereço</string>
    <string name="informe_seu_endere_o">Informe seu endereço</string>
    <string name="telefone">Telefone</string>
    <string name="digite_seu_numero">Digite seu numero</string>
    <string name="fa_a_um_coment_rio">Faça um comentário</string>
    <string name="nota">nota</string>
    <string name="escolha_o_m_todo_de_entrega">Escolha o método de entrega</string>
    <string name="entrega_no_mesmo_dia">Entrega no mesmo dia</string>
    <string name="entrega_agendada">Entrega agendada</string>
    <string name="retirada">Retirada</string>
    <string name="order_settings">Order</string>
    <string name="status">Status</string>
    <string name="favorites">Favorites</string>


    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="data">Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_order">Order Activity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="tab_label1">Rosquinha</string>
    <string name="tab_label2">Sanduiche</string>
    <string name="tab_label3">Sorvete</string>
    <string name="donut">Donut</string>
    <string name="ice_cream_sandwitch">Ice Cream Sandwitch</string>
    <string name="froyo_yogurt">Froyo Yogurt</string>

</resources>
